<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HotelCentral1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello fragment blank</string>
    <string name="hint_name">Guest Name</string>
    <string name="helper_required">Required</string>
    <string name="hint_dni">Dni</string>
    <string name="hint_apellido">Guest Last name</string>
    <string name="hint_habitacion">Room number</string>
    <string name="hint_foto">Room number</string>
    <string name="hint_fecha">Arrival date</string>
    <string name="hint_dias">Reserved days</string>
    <string name="hint_estado">Booking status</string>
    <string name="title_add">Save New Reservation</string>
    <string name="menu_save">Save</string>
    <string name="menu_detalle">Detail</string>
    <string name="message_save_success">Reservation Saved Successfully!</string>
    <string name="message_edit_success">Booking Successfully Updated!!!</string>
    <string name="text_required">Required</string>
    <string name="message_delete">Do you want to delete the reservation?</string>
    <string name="message_confiirm">Delete</string>
    <string name="message_del_cancel">Cancel</string>
    <string name="message_options_title">What do you want to do?</string>
    <string name="hint_celular">Cell Phone Number</string>
    <string name="error_no_resolve">No Compatible App Found</string>
    <string name="fecha_textview">Select Arrival Date:</string>
    <string name="title_active_login">Firebase Login</string>
    <string name="title_registrarse">Registrarse como Usuario</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Registrarse</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="mesa_edit_success">Update Successfully!!</string>
    <string name="mesa_save_success">Room Saved ok!!!</string>

</resources>