<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ReservarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/fecha_textview"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btSelecFecha"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="@drawable/ic_calendar" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilFecha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:hint="@string/hint_fecha"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/ic_fecha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textNoSuggestions"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_apellido"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilApellido"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apellido"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/counter_max_name"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:startIconDrawable="@drawable/ic_apellido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLength="@integer/counter_max_name" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dni"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_dni"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_dni"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_dni"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_celular"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_cel"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_celular"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_cel"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"   >
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilDias"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_dias"
                    android:layout_weight="1"
                    app:endIconMode="clear_text">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
               <Spinner
                   android:id="@+id/spnrohabita"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:ignore="TouchTargetSizeCheck" />

           </LinearLayout>

            <ImageView
                android:id="@+id/imagePhoto"
                android:layout_width="@dimen/photo_ancho"
                android:layout_height="@dimen/photo_altura"
                android:layout_marginStart="@dimen/padding_default"
                android:src="@drawable/ic_foto"
                app:srcCompat="@drawable/ic_foto" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>